<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2021 LiteKite Startup. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">AppWidgets</string>
    <string name="placeholder_main_activity">This is an Activity of the AppWidget sample.
        Long press the app icon and choose the widget picker to try the widgets in the sample</string>
    <string name="widget_weather_location">Chennai</string>
    <string name="widget_weather_mostly_cloudy">Mostly cloudy</string>
    <string name="widget_weather_degree">14°</string>
    <string name="widget_weather_degree_two">10°</string>
    <string name="widget_weather_degree_three">12°</string>
    <string name="widget_weather_icon">Widget Icon</string>
    <string name="rainy_icon">Rainy Icon</string>
    <string name="pm_4">4pm</string>
    <string name="tuesday">Tuesday</string>
    <string name="empty_view_text">This is the empty view</string>
</resources>
